WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45316
Regression in JPEG texture uploads on Mac OS X
https://bugs.webkit.org/show_bug.cgi?id=45316
Summary
Regression in JPEG texture uploads on Mac OS X
Kenneth Russell
Reported
2010-09-07 12:13:04 PDT
The fix for the longstanding premultiplied alpha issue in
https://bugs.webkit.org/show_bug.cgi?id=44566
has introduced a regression when uploading textures using the Core Graphics format kCGImageAlphaNoneSkipLast. The issue is a missing break statement in a nested switch.
Attachments
Patch
(5.96 KB, patch)
2010-09-07 14:20 PDT
,
Kenneth Russell
dglazkov
: review+
kbr
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-09-07 14:20:16 PDT
Created
attachment 66765
[details]
Patch From the ChangeLog: Fixed regression introduced in
https://bugs.webkit.org/show_bug.cgi?id=44566
. Added regression test covering this case to gl-teximage.html in Khronos repository and synced test with WebKit's version.
Dimitri Glazkov (Google)
Comment 2
2010-09-07 14:21:50 PDT
Comment on
attachment 66765
[details]
Patch ok.
Kenneth Russell
Comment 3
2010-09-07 14:24:31 PDT
Committed
r66908
: <
http://trac.webkit.org/changeset/66908
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug