2010-09-07  Kenneth Russell  <kbr@google.com>

Reviewed by Dimitri Glazkov.

        Regression in JPEG texture uploads on Mac OS X
        https://bugs.webkit.org/show_bug.cgi?id=45316

        Fixed regression introduced in
        https://bugs.webkit.org/show_bug.cgi?id=44566 . Added regression
        test covering this case to gl-teximage.html in Khronos repository
        and synced test with WebKit's version.

        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData):
2010-09-07  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Regression in JPEG texture uploads on Mac OS X
        https://bugs.webkit.org/show_bug.cgi?id=45316

        Fixed regression introduced in
        https://bugs.webkit.org/show_bug.cgi?id=44566 . Added regression
        test covering this case to gl-teximage.html in Khronos repository
        and synced test with WebKit's version.

        * fast/canvas/webgl/gl-teximage-expected.txt:
        * fast/canvas/webgl/gl-teximage.html:
        * fast/canvas/webgl/resources/blue-1x1.jpg: Added.


Canonical link: https://commits.webkit.org/57666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66908 268f45cc-cd09-0410-ab3c-d52691b4dbfc